# c_unit_test_example

./: .gitignore  CMakeLists.txt  LICENSE  test.sh
src/: CMakeLists.txt  fizzbuzz.c  fizzbuzz.h  fizzbuzz_main.c
tests/: CMakeLists.txt  myTest.c  test_criterion.c
